Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Selibrary</title>
+    <title>SELibrary</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/SergioEstevao/SELibrary">View on GitHub</a>
 
-          <h1 id="project_title">Selibrary</h1>
+          <h1 id="project_title">SELibrary</h1>
           <h2 id="project_tagline">Categories and Classes</h2>
 
             <section id="downloads">
@@ -31,11 +31,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>SELibrary</h1>
+        <h2>
+<a name="selibrary" class="anchor" href="#selibrary"><span class="octicon octicon-link"></span></a>SELibrary</h2>
 
 <p>SELibrary is a collection of utility methods and category extensions that I'm standardizing on. This should evolve into a toolset of well-documented and -tested code to accelerate future developments.</p>
 
-<h2>At a Glance</h2>
+<h2>
+<a name="at-a-glance" class="anchor" href="#at-a-glance"><span class="octicon octicon-link"></span></a>At a Glance</h2>
 
 <p>Contained are several category methods</p>
 
@@ -53,11 +55,13 @@
 <li>SEAppDelegate - app delegate implementation using a "service" approach.</li>
 <li>SETableViewCell - comon code to loading tableviewcell from nib files.</li>
 <li>SEBorderView - a view that allows to define a border. </li>
-</ul><h2>Documentation</h2>
+</ul><h2>
+<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
 <p>Documentation is being generated using the AppleDoc tool. If you build the Documentation target it will automatic added the information to your XCode documentation library. </p>
 
-<h2>Usage</h2>
+<h2>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
 <p>The SELibrary.framework is using the "Fake Framework" template put together by <a href="https://github.com/kstenerud/iOS-Universal-Framework">Karl Stenerud</a>. If your app does not use ARC yet (but SELibrary does) then you also need the -fobjc-arc linker flag.</p>
 
@@ -74,14 +78,26 @@
 <li>SystemConfiguration.framework</li>
 </ul>
 </li>
-</ol>
+</ol><h2>
+<a name="contact" class="anchor" href="#contact"><span class="octicon octicon-link"></span></a>Contact</h2>
+
+<p>Sergio Estevao</p>
+
+<ul>
+<li><a href="http://github.com/SergioEstevao">http://github.com/SergioEstevao</a></li>
+<li><a href="http://twitter.com/SergioEstevao">http://twitter.com/SergioEstevao</a></li>
+<li><a href="mailto:sergioestevao@gmail.com">sergioestevao@gmail.com</a></li>
+</ul><h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p>SELibrary is available under the MIT license. See the LICENSE file for more info.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Selibrary maintained by <a href="https://github.com/SergioEstevao">SergioEstevao</a></p>
+        <p class="copyright">SELibrary maintained by <a href="https://github.com/SergioEstevao">SergioEstevao</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
